@@ -37,7 +37,20 @@ function selectrow(row, rlId, rownum)
   }
 }
 
-function rl_do(rlId, rownum, action, confirmtext)
+/**
+ * Try to perform one of the given actions on the given row
+ * until one action can be succesfully performed.
+ */
+function rl_try(recordListId, rowNum, actions, confirmText)
+{
+  actions.each(function(action) {
+    if (rl_doAndReturn(recordListId, rowNum, action, confirmText)) {
+      throw $break;
+    }
+  });
+}
+
+function rl_doAndReturn(rlId, rownum, action, confirmtext)
 {
   extra="";
   if (confirmtext)
@@ -45,6 +58,7 @@ function rl_do(rlId, rownum, action, confirmtext)
     confirmed = confirm(confirmtext);
     if (confirmed) extra = "&confirm=1";
   }
+  
   if (rl_a[rlId][rownum][action] && (!confirmtext || confirmed))
   {
     if (!rl_a[rlId]['embed'])
@@ -55,7 +69,18 @@ function rl_do(rlId, rownum, action, confirmtext)
     {
       atkSubmit(rl_a[rlId][rownum][action]+'&'+rl_a[rlId]['base']+extra);
     }
+    
+    return true;
   }
+  else
+  {
+    return false;
+  }
+}
+
+function rl_do(rlId, rownum, action, confirmtext)
+{
+  rl_doAndReturn(rlId, rownum, action, confirmtext);
 }
 
 function rl_next(rlId)
@@ -77,5 +102,5 @@ function rl_previous(rlId)
   return false;
 }
 
-rl_a = new Array();
+var rl_a = {};
 
